@@ -35,6 +35,10 @@
 
 #include "rxvt.h"
 
+#define STATUS_SUCCESS           0
+#define STATUS_FAILURE           1
+#define STATUS_CONNECTION_FAILED 2
+
 struct client : rxvt_connection {
   client ();
 };
@@ -44,7 +48,7 @@ client::client ()
   if ((fd = socket (AF_UNIX, SOCK_STREAM, 0)) < 0)
     {
       perror ("unable to create communications socket");
-      exit (EXIT_FAILURE);
+      exit (STATUS_FAILURE);
     }
 
   char *sockname = rxvt_connection::unix_sockname ();
@@ -56,7 +60,7 @@ client::client ()
   if (connect (fd, (sockaddr *)&sa, sizeof (sa)))
     {
       perror ("unable to connect to the rxvt-unicode daemon");
-      exit (EXIT_FAILURE);
+      exit (STATUS_CONNECTION_FAILED);
     }
 }
 
@@ -82,7 +86,7 @@ main (int argc, const char *const *argv)
   if (!getcwd (cwd, sizeof (cwd)))
     {
       perror ("unable to determine current working directory");
-      exit (EXIT_FAILURE);
+      exit (STATUS_FAILURE);
     }
 
   c.send ("CWD"), c.send (cwd);
@@ -115,7 +119,7 @@ main (int argc, const char *const *argv)
         if (!ptytty::send_fd (c.fd, cint))
           {
             fprintf (stderr, "unable to send fd %d: ", cint); perror (0);
-            exit (EXIT_FAILURE);
+            exit (STATUS_FAILURE);
           }
       }
     else if (!strcmp (tok, "END"))
@@ -123,7 +127,7 @@ main (int argc, const char *const *argv)
         int success;
 
         if (c.recv (success))
-          exit (success ? EXIT_SUCCESS : EXIT_FAILURE);
+          exit (success ? STATUS_SUCCESS : STATUS_FAILURE);
       }
     else
       {
@@ -131,6 +135,6 @@ main (int argc, const char *const *argv)
         break;
       }
 
-  return EXIT_FAILURE;
+  return STATUS_FAILURE;
 }
 
